hphp/hack/test/typecheck/concurrent/error/concurrent_complex_assign.php.exp
File "concurrent_complex_assign.php", line 7, characters 21-23:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "concurrent_complex_assign.php", line 9, characters 21-23:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "concurrent_complex_assign.php", line 8, characters 27-29:
Variable `$a2` is undefined, or not always defined. (Naming[2050])
File "concurrent_complex_assign.php", line 7, characters 21-28:
Did you mean `$a1` instead?
